--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -39,7 +39,7 @@ jobs:
           platforms: linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64,linux/ppc64le,linux/s390x
           push: true
           tags: |
-            user/hello_world:latest
-            user/hello_world:1.0.0
-            ghcr.io/user/hello_world:latest
-            ghcr.io/user/hello_world:1.0.0
+            neszt/hello_world:latest
+            neszt/hello_world:1.0.0
+            ghcr.io/neszt/hello_world:latest
+            ghcr.io/neszt/hello_world:1.0.0
