git action perl runs on perldocker/perl-tester

--- a/.github/workflows/perl.yaml
+++ b/.github/workflows/perl.yaml
@@ -16,7 +16,7 @@ jobs:
         perl-version:
           - 'latest'
     container:
-      image: perl:${{ matrix.perl-version }}
+      image: perldocker/perl-tester:${{ matrix.perl-version }}
     steps:
       - uses: actions/checkout@v2
       - run: perl -V
