--- a/.github/workflows/perl.yaml
+++ b/.github/workflows/perl.yaml
@@ -20,4 +20,4 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: perl -V
-      - run: perl -MPerl::Critic=critique -e 'my @c = critique({-severity => "harsh"}, shift); foreach my $v ( @c ) { my $f = @{$v->{_location}}[4]; print "File: $f\n - Policy: $v->{_policy}\n - $v"; } ; print @c ; exit (@c?1:0)' hello_world.pl
+      - run: perl -MPerl::Critic=critique -e "my @c = critique({-severity => 'harsh'}, shift); foreach my \$v ( @c ) { my \$f = @{\$v->{_location}}[4]; print \"File: \$f\n - Policy: \$v->{_policy}\n - \$v\"; } ; print @c ; exit (@c?1:0)" hello_world.pl
